RESOLVED FIXED57211
fix style sharing with :any and sibling selectors
https://bugs.webkit.org/show_bug.cgi?id=57211
Summary fix style sharing with :any and sibling selectors
Ojan Vafai
Reported 2011-03-28 01:00:43 PDT
fix style sharing with :any and sibling selectors
Attachments
Patch (5.63 KB, patch)
2011-03-28 01:04 PDT, Ojan Vafai
koivisto: review+
Ojan Vafai
Comment 1 2011-03-28 01:04:33 PDT
Ojan Vafai
Comment 2 2011-03-28 01:05:06 PDT
The test in this patch is blocked on bug 57207 getting fixed.
Ojan Vafai
Comment 3 2011-03-28 01:08:20 PDT
*** Bug 56999 has been marked as a duplicate of this bug. ***
Ojan Vafai
Comment 4 2011-03-28 19:36:36 PDT
WebKit Review Bot
Comment 5 2011-03-28 21:42:34 PDT
http://trac.webkit.org/changeset/82184 might have broken Windows XP Debug (Tests)
Note You need to log in before you can comment on or make changes to this bug.