2011-03-28  Ojan Vafai  <ojan@chromium.org>

Reviewed by Antti Koivisto.

        fix style sharing with :any and sibling selectors
        https://bugs.webkit.org/show_bug.cgi?id=57211

        Also tests sibling selector style sharing in general since
        no existing tests seem to cover that codepath.

        * fast/css/sibling-selectors-expected.txt: Added.
        * fast/css/sibling-selectors.html: Added.
2011-03-28  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Antti Koivisto.

        fix style sharing with :any and sibling selectors
        https://bugs.webkit.org/show_bug.cgi?id=57211

        Test: fast/css/sibling-selectors.html

        * css/CSSStyleSelector.cpp:
        (WebCore::collectFeaturesFromList):

Canonical link: https://commits.webkit.org/71986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82184 268f45cc-cd09-0410-ab3c-d52691b4dbfc